<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/mare"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_margin="16dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/text"/>
        <TextView
            style="@style/PrimaryText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc_header"/>
        <TextView
            style="@style/SecondaryText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_1"/>
        <TextView
            style="@style/SecondaryText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_2"/>
        <TextView
            style="@style/SecondaryText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_3"/>
        <TextView
            style="@style/SecondaryText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_4"/>
        <TextView
            style="@style/PrimaryText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_header"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                style="@style/ContactTextLeft"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/website_1"/>
            <TextView
                style="@style/ContactTextRight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:clickable="true"
                android:onClick="goToWebsite"
                android:text="@string/website_2"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                style="@style/ContactTextLeft"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/phone_1"/>
            <TextView
                style="@style/ContactTextRight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:clickable="true"
                android:onClick="callNumber"
                android:text="@string/phone_2"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                style="@style/ContactTextLeft"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/address_1"/>
            <TextView
                style="@style/ContactTextRight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:clickable="true"
                android:onClick="launchMaps"
                android:text="@string/address_2"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
